API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes


06-Jan-2003	Troy A. Griffitts <scribe@crosswire.org>
	Changed system[Log|File|Locale]Mgr to
		*Mgr *[get|set]System*Mgr() per Daniel Glassey's
		discovery of potential problems from order of
		initializing statics.

	Added new prefix recognition for OSIS lemma prefix
		"strong:"

* Release 1.5.7 *

28-Dec-2003	Troy A. Griffitts <scribe@crosswire.org>
	Updated many filters
	Split cvs, removing apps
	Updated OSIS importer

28-Aug-2003	Troy A. Griffitts <scribe@crosswire.org>
	Abstracted the search interface from SWModule
	Added experimental implementation of fast
		search framework to zText using
		clucene

* Release 1.5.6 *

26-Aug-2003	Troy A. Griffitts <scribe@crosswire.org>
	Packaged up 1.5.6
	Updated CORBA services to expose a little more
		functionality for the OSIS webapp

12-Aug-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added Enciphering code that works with SWBuf
	Fixed appendFormatted to re-init var_args
	Other small fixes to build on Opteron 64-bit

07-Jul-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added enough functionality to remotely install
		into installmgr, but Daniel Glassey needs
		to fix the linux autobuild stuff :)
	Added SWOptionFilter and made most option filters
		extent this class.

26-Jun-2003	Troy A. Griffitts <scribe@crosswire.org>
	Removed all std::string references from API and
		mostly replaced with SWBuf
	Added int max param to SWBuf::append
	Added some file copy functions to FileMgr
	Moved some more install stuff to installmgr

18-Jun-2003	Troy A. Griffitts <scribe@crosswire.org>
	Joachim added OSISFootnotes.  Added entryAttributes
		parsing in OSISFootnotes
	Added = operator and empty constructor to XMLTag
	Fixed OSISHeadings to passthru non x-preverse note
		bodies

10-Jun-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added tests/testsuite for building a good set
		of regression tests
	Fixed VerseKey parsing of "1. book" and osisRefs
